# phased-array-systems

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  more_context.txt  package_design_and_requirements.txt  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
app/: streamlit_app.py
app/pages/: 1_Single_Case.py  2_Trade_Study.py  3_RF_Cascade.py  4_Radar_Detection.py
docs/: changelog.md  contributing.md  faq.md  index.md
docs/api/: architecture.md  index.md  io.md  reports.md  requirements.md  scenarios.md  trades.md  viz.md
docs/api/models/: antenna.md  comms.md  index.md  radar.md  swapc.md
docs/cli/: doe.md  index.md  pareto.md  report.md  run.md
docs/getting-started/: concepts.md  index.md  installation.md  quickstart.md
docs/theory/: index.md  link-budget-equations.md  pareto-optimization.md  phased-arrays.md  radar-equation.md
docs/tutorials/: comms-trade-study.md  config-driven-workflow.md  index.md  radar-detection-trade.md  sensitivity-analysis.md
docs/user-guide/: architecture.md  index.md  link-budget.md  pareto-analysis.md  radar-detection.md  reports.md  requirements.md  scenarios.md  trade-studies.md  visualization.md
examples/: 01_comms_single_case.py  02_comms_doe_trade.py
examples/configs/: comms_basic.yaml  comms_doe.yaml
notebooks/: tutorial_phased_array_trade_study.ipynb
src/phased_array_systems/: __about__.py  __init__.py  cli.py  constants.py  evaluate.py  types.py
src/phased_array_systems/architecture/: __init__.py  config.py
src/phased_array_systems/io/: __init__.py  config_loader.py  exporters.py  schema.py
src/phased_array_systems/models/: __init__.py  base.py
src/phased_array_systems/requirements/: __init__.py  core.py
src/phased_array_systems/scenarios/: __init__.py  base.py  comms.py  radar.py
src/phased_array_systems/trades/: __init__.py  design_space.py  doe.py  pareto.py  runner.py
src/phased_array_systems/utils/: __init__.py  hashing.py
tests/: __init__.py  test_antenna_adapter.py  test_architecture.py  test_cli.py  test_comms_link_budget.py  test_doe.py  test_evaluate.py  test_pareto.py  test_radar.py  test_requirements.py  test_runner.py  test_swapc.py  test_viz.py
(+23 files in other folders)
